--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,27 +1,44 @@
 /* variables globales */
+
+
 :root {
   --bg-container: #c7c7c7;
 }
+* {
+  border: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+ 
+
+
+  background-image: url("../imagenes/Drone-Cup_1393070681_499134_1440x600.jpg");
+  height: 100vh;
+  background-color: red;
+
+
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-attachment: fixed;
+  background-size: cover;
+}
 .contenido {
   margin: 0 auto;
 background: var(--bg-container);
-  width: 1100px; ;
-  
-  
+  width: 1100px; ; 
 }
 .carta-1{
-  margin-left: 45px!important;
-  
+  margin-left: 45px!important; 
 }
-
-
-
-
-
-
-
-
   .sombra{
     font-size: 30px;
     text-decoration: none;
