--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 /* variables globales */
 
-
 :root {
   --bg-container: #c7c7c7;
 }
@@ -11,35 +10,63 @@
   padding: 0;
 }
 
-html,
 body {
   max-width: 100%;
   overflow-x: hidden;
 }
 
 body {
- 
-
-
   background-image: url("../imagenes/Drone-Cup_1393070681_499134_1440x600.jpg");
   height: 100vh;
   background-color: red;
-
-
   background-repeat: no-repeat;
   background-position: top center;
   background-attachment: fixed;
   background-size: cover;
 }
+
 .contenido {
   margin: 0 auto;
 background: var(--bg-container);
   width: 1100px; ; 
 }
+
 .carta-1{
   margin-left: 45px!important; 
+  
 }
-  .sombra{
+
+.carta-1 h5{
+  color: blue;
+}
+
+.carta-1 img{
+  width: 100%!important;
+  height: 100px!important;
+
+}
+
+.carta-2 h5{
+  color: blue;
+}
+
+.carta-2 img{
+  width: 100%!important;
+  height: 100px!important;
+}
+
+.carta-3 h5{
+  color: blue;
+}
+
+.carta-3 img{
+  width: 100%!important;
+  height: 100px!important;
+}
+
+
+ 
+.sombra{
     font-size: 30px;
     text-decoration: none;
     font-family: sans-serif;
@@ -49,28 +76,28 @@ background: var(--bg-container);
   }
 
 
-  .raimbow h1{
+.raimbow h1{
     width: 75%;
     color: black    ;
   }
-  .raimbow p{
+.raimbow p{
     width: 50%;
   }
 
-  .spider-man h1{
+.spider-man h1{
     width: 85%;
     color:black;
   }
-  .spider-man p{
+.spider-man p{
     width: 75%;
     font-size: 15px;
   }
-  .new{
+.new{
    color: blue  ;
   
   }
   
-  .devil h1{
+.devil h1{
     width: 75%;
 
 
@@ -81,7 +108,40 @@ background: var(--bg-container);
     width: 75%;
   }
 
-  *{
+  .pug h1 {
+color: black  ;
+width: 75%;
+  }
+
+
+  .pug img{
+    width: 75%;
+    height: 75%;
+  }
+
+  .pug p{
+    font-size: 18;
+    width: 70%;
+  }
+
+
+
+  .pug h2{
+
+    color: black;
+    width: 75%;
+  }
+
+
+
+
+
+
+
+
+
+
+*{
     margin:0px;
     padding: 0px;
     box-sizing: border-box;
@@ -89,7 +149,7 @@ background: var(--bg-container);
 
   }
 
-  footer{
+ footer{
     width: 100%;
     background: #202020;
     color: white;
@@ -97,7 +157,7 @@ background: var(--bg-container);
 
 
   }
-  .contenedorall{
+.contenedorall{
 width: 100%;
 max-width: 1200px;
 margin: auto;
